Fix ShellDagTask bug